# Ngame

./: .dockerignore  .env.example  .gitignore  AGENTS_en.md  GAME_DESIGN.md  GAME_DESIGN_TH.md  GAME_DESIGN_en.md  README.md  README_TH.md  SKILL_en.md  codex_config_en.toml  docker-compose.yml  first_prompt_en.md  package-lock.json  package.json  tsconfig.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260717_0001_auth.py  20260717_0002_google_only.py  20260717_0003_google_email_unique.py  20260717_0004_player_profile.py  20260718_0005_match_history.py  20260719_0006_social.py  20260719_0007_deck_admin.py
backend/src/ngame_api/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  rate_limit.py  schemas.py  security.py  services.py
backend/src/ngame_api/routers/: admin.py  auth.py  matches.py  puzzles.py  social.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_migrations.py
client/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json
docs/: BUILD_AND_DEPLOY.md  BUILD_AND_DEPLOY_TH.md  ENVIRONMENT.md  ENVIRONMENT_TH.md  FUTURE_MODES.md  GAME_RULES.md  GAME_RULES_TH.md  KNOWN_LIMITATIONS.md  KNOWN_LIMITATIONS_TH.md  LOCAL_DEVELOPMENT.md  LOCAL_DEVELOPMENT_TH.md  PORTS.md  PORTS_TH.md  PRODUCTION_RUN_PROMPT_TH.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_TH.md  README.md  REALTIME_PROTOCOL.md  REALTIME_PROTOCOL_TH.md  ROADMAP.md  ROADMAP_TH.md
server/: Dockerfile  package.json
shared/: package.json  tsconfig.json
(+38 files in other folders)
