[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ngame-api"
version = "0.1.0"
description = "Authentication and persistence API for NGAME"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.18.5",
  "authlib==1.7.2",
  "email-validator==2.3.0",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "itsdangerous==2.2.0",
  "psycopg[binary]==3.3.4",
  "pydantic-settings==2.14.2",
  "pyjwt[crypto]==2.13.0",
  "sqlalchemy[asyncio]==2.0.51",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.22.1",
  "pytest==8.4.2",
  "pytest-asyncio==1.4.0",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
